# ml_oss_framework

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  run_experiment.py  server_cli.py  train.py  train_distillation.py
configs/: config.yaml  config_distillation.yaml
configs/distillation/: default.yaml  soft.yaml
configs/model/: demo_cnn.yaml
configs/server/: default.yaml
configs/training/: default.yaml  fast.yaml
src/: __init__.py  config.py  data.py  database.py  distillation.py  model.py  schema.py  server.py  trainer.py  utils.py
